--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 
 body {
 	background-color: var(--background);
+	user-select: none;
 }
 
 .quiz {
@@ -46,6 +47,7 @@ body {
 	max-width: var(--question-width);
 	height: var(--question-height);
 	margin-top: 0px;
+	padding: 0px 7px;
 	border: 2px solid var(--question-border);
 	background-color: var(--question-background);
 	color: var(--question-text);
@@ -75,7 +77,7 @@ body {
 .question > ol > li::before {
 	font-family: 'Material Icons Outlined';
 	content: var(--before-content);
-	margin-right: 15px;
+	margin-right: 7px;
 }
 
 .answer {
@@ -132,4 +134,10 @@ body {
 	text-align: center;
 	font-size: 3em;
 	color: var(--end-screen-text);
+}
+
+@media (pointer:none), (pointer:coarse) {
+	body {
+		font-size: 12px;
+	}
 }
